--- a/templates/items.html
+++ b/templates/items.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Item ID: {{ id }}</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<!--     <form method="post" action="/apply_strategy">-->
+<!--        <select name="strategy_id">-->
+<!--            {% for strategy in strategies %}-->
+<!--                <option value="{{ strategy.id }}">{{ strategy.name }}</option>-->
+<!--            {% endfor %}-->
+<!--        </select>-->
+<!--        <input type="hidden" name="stock_id" value="{{ stock.id }}" />-->
+<!--        <input type="submit" value="Apply Strategy" />-->
+<!--    </form>-->
+    <table id="item-list" class="table" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>id</th>
+                        <th>title</th>
+                        <th>description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in item_list %}
+    <!--                    [{"title":"title1","description":"exyyy","id":1,"owner_id":1}]-->
+                    <tr>
+                        <td>{{ item.id }}</td>
+                        <td>{{ item.title }}</td>
+                        <td>{{ item.description }}</td>
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
 </body>
 </html>
