--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -23,6 +23,7 @@
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="/items">Items</a></li>
           </ul>
         </li>
         <li class="nav-item">
