--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar bg-primary navbar-expand-lg" style="background-color: #e3f2fd;" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="{{ url_for('static', path='images/logo_dark_big.png') }}" alt="" width="30" height="24">
